name:                   sdl2-net
version:                0.1.0.0
synopsis:               Raw bindings to SDL_net 2.0
description:            Please see README.md
homepage:               https://github.com/oldmanmike/sdl2-net
bug-reports:            https://github.com/oldmanmike/sdl2-net/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2015 Michael Carpenter
category:               Game
build-type:             Simple
extra-source-files:     LICENSE, README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      SDL.Raw.Net
  extra-libraries:      SDL2, SDL_net
  pkgconfig-depends:    sdl2 >= 2.0.3, SDL_net
  build-depends:        base >= 4.7 && < 5,
                        sdl2,
                        transformers
  --ghc-options:          -lSDL_net
  default-language:     Haskell2010

test-suite sdl2-net-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base,
                        hspec,
                        hspec-expectations,
                        QuickCheck,
                        sdl2-net
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/oldmanmike/sdl2-net
